# pixel_forge

./: Cargo.toml  LICENSE  README.md  pixel_forge.pyi  pixel_forge_rs.pyi  pyproject.toml  test.py
.github/workflows/: CI.yml
docs/: conf.py  index.rst  requirements.txt
docs/content/: acknowledgements.rst  capture.rst  getting_started.rst  install.rst  monitor.rst  window.rst
pixel_forge/: __init__.py
src/: capture.rs  capture_utils.rs  direct_x.rs  directx_capture.rs  frame.rs  lib.rs  monitor.rs  window.rs
tests/: __init__.py  test_capture.py  test_monitor.py  test_window.py
