[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pixel_forge"
version = "0.1.0"
description = "Ultra-fast screen capture in Rust with Python bindings"
readme = "README.md"
authors = [{ name = "Martin Schuck", email = "real.amacati@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["screenshot", "window", "capture"]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/amacati/pixel_forge"

[tool.pyright]
extension-pkg-allow-list = "pixel_forge"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN101", "ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["D103", "D100"]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
